--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.10     2014-09-19 (PERLANCAR) - not yet released
+0.10     2014-09-19  Released-By: PERLANCAR; Released: no
 
          - This is a reboot of the old Config-Tree I wrote in 2009. The new
            interface is not totally different but has some incompatibilities
